[gd_scene load_steps=7 format=3 uid="uid://b4ib5gq47ucvb"]

[ext_resource type="Script" path="res://scrips/menu_dead.gd" id="1_waixu"]
[ext_resource type="Texture2D" uid="uid://5qhtek7fcvd3" path="res://assets/sprites/GIU/MenuDead.png" id="2_rsagv"]
[ext_resource type="FontFile" uid="uid://dqvlk5n2tn7dy" path="res://assets/fonts/font.ttf" id="3_vhr7g"]
[ext_resource type="Texture2D" uid="uid://64nomanfqp16" path="res://assets/sprites/Moneda.png" id="4_kcdq6"]
[ext_resource type="Texture2D" uid="uid://dpvkeeehmj7t8" path="res://assets/sprites/GIU/BottonReset.png" id="5_7861f"]
[ext_resource type="Texture2D" uid="uid://r14sthjo7ae" path="res://assets/sprites/GIU/ButtonHome.png" id="6_ww6gv"]

[node name="MenuDead" type="Node2D"]
position = Vector2(1280, 720)
script = ExtResource("1_waixu")

[node name="GUI" type="Sprite2D" parent="."]
position = Vector2(2.00012, -2)
scale = Vector2(11.0625, 8.40625)
texture = ExtResource("2_rsagv")
region_enabled = true
region_rect = Rect2(15.9815, 16.0156, 96.074, 64.0769)

[node name="TextDead" type="Label" parent="."]
offset_left = -459.0
offset_top = -231.0
offset_right = 463.0
offset_bottom = -47.0
theme_override_fonts/font = ExtResource("3_vhr7g")
theme_override_font_sizes/font_size = 145
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = -365.0
offset_top = -35.0
offset_right = -25.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("3_vhr7g")
theme_override_font_sizes/font_size = 80
text = "SCORE: "
vertical_alignment = 1

[node name="CountScore" type="Label" parent="Score"]
layout_mode = 0
offset_left = 107.0
offset_top = 133.0
offset_right = 197.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("3_vhr7g")
theme_override_font_sizes/font_size = 80
text = "00"
vertical_alignment = 1

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(145, 73)
scale = Vector2(1.84375, 1.70547)
texture = ExtResource("4_kcdq6")
region_enabled = true
region_rect = Rect2(-0.0582085, -0.00818157, 64.0266, 64.1089)

[node name="CountCoins" type="Label" parent="Coin"]
offset_left = 35.2542
offset_top = -26.3856
offset_right = 156.254
offset_bottom = 30.6144
theme_override_fonts/font = ExtResource("3_vhr7g")
theme_override_font_sizes/font_size = 50
text = ":"
vertical_alignment = 1

[node name="ButtonReset" type="Button" parent="."]
offset_left = 190.0
offset_top = 178.0
offset_right = 327.0
offset_bottom = 315.0
theme_override_icons/icon = ExtResource("5_7861f")
flat = true
expand_icon = true

[node name="ButtonHome" type="Button" parent="."]
offset_left = -290.0
offset_top = 181.0
offset_right = -153.0
offset_bottom = 321.0
theme_override_icons/icon = ExtResource("6_ww6gv")
icon = ExtResource("6_ww6gv")
flat = true
expand_icon = true

[connection signal="pressed" from="ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="ButtonHome" to="." method="_on_button_home_pressed"]
